plugins {
    id 'java'

}

group = 'com.kodilla'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
    mavenCentral()
}

dependencies {

}

tasks.named('test') {
	useJUnitPlatform()
}

